--- a/styles.css
+++ b/styles.css
@@ -88,9 +88,15 @@ body {
 @media (max-width: 768px) and (min-device-pixel-ratio: 1) {
     .title {
         font-size: 26px;
+        white-space: nowrap; /* Prevent line breaks */
+        overflow: hidden; /* Hide overflow */
+        text-overflow: ellipsis; /* Display an ellipsis (...) if the text overflows */
     }
 
     .section, .date, .countdown, .info {
         font-size: 18px;
+        white-space: nowrap; /* Prevent line breaks */
+        overflow: hidden; /* Hide overflow */
+        text-overflow: ellipsis; /* Display an ellipsis (...) if the text overflows */
     }
 }
