--- a/styles.css
+++ b/styles.css
@@ -85,6 +85,14 @@ body {
     color: #FFFFFF;
 }
 
+.title, .section, .date, .countdown, .info {
+    width: 100%; /* Take the full width of the container */
+    text-align: center; /* Center align the text */
+    white-space: nowrap; /* Prevent line breaks */
+    overflow: hidden; /* Hide overflow */
+    text-overflow: ellipsis; /* Display an ellipsis (...) if the text overflows */
+}
+
 /* Media query for devices with a maximum pixel width of 768px */
 @media (max-width: 768px) and (min-device-pixel-ratio: 1) {
     .title {
